Access first and last elements through Sequenced Collections